# bf2

./: .gitignore  Dockerfile  build.Dockerfile
.github/workflows/: main.yml
bf2-worker/: .pdm-python  pyproject.toml  serverList.py
ealist/: Makefile  ealist.c
gslist/: .gitignore  README.md
gslist/src/: compa.bat  gscfg.h  gslist.c  gsweb.h  multi_query.h
