[tool.poetry]
name = "bf1"
version = "0.1.0"
description = ""
authors = ["Zefanja Jobse <zefanjaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.2"
Flask = "^3.0.2"
Quart = "^0.19.4"
hypercorn = "^0.16.0"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
